Fix bug 154718 (kdemultimedia doesn't build on NetBSD) with patches submitted by Mark Davies and tweaked a bit by myself.

Ended up simply replacing the 10 line preprocessor crap about htonl with a simple
#include <arpa/inet.h> which the Linux, NetBSD, and FreeBSD man pages available to me
all agree is where htonl is defined.

BUG:154718

svn path=/trunk/KDE/kdemultimedia/libkcompactdisc/; revision=756952